Improve: ラジオボタンの改善

--- a/JavaScript_3.html
+++ b/JavaScript_3.html
@@ -10,9 +10,9 @@
 <body>
   <h1>ToDoリスト</h1>
 
-    <input type="radio" name="radio" value="all" id="radio_all" onclick="chengeoverTask()" checked>すべて
-    <input type="radio" name="radio" value="working" id="radio_working" onclick="chengeoverTask();">作業中
-    <input type="radio" name="radio" value="done" id="radio_done" onclick="chengeoverTask();">完了
+    <input type="radio" name="radio" value="all" id="radio_all" checked>すべて
+    <input type="radio" name="radio" value="working" id="radio_working">作業中
+    <input type="radio" name="radio" value="done" id="radio_done">完了
 
   <table>
     <thead>
